# chalmers-judge

./: .gitignore  flake.nix  pyproject.toml  t.py
deploy/: deploy-host.sh  deploy-queue.sh  deploy-web.sh
development/: clear_submissions.sh  install_builddeps.sh  install_devdeps.sh  new_db.sh  requeue_stuck.sh  typecheck.sh
frontend_assets/: build_assets.sh  watch_assets.sh
frontend_assets/js/: context.ts  countdown.ts
judgehost/: WORKSPACE
judgehost/judgehost/deb/: omogenjudge-host.service
nix/: monolith-vm.nix  packages.nix
omogenjudge/contests/: active_contest.py  contest_times.py  scoreboard.py
omogenjudge/frontend/: decorators.py  jinja2.py  js_context.py
omogenjudge/frontend/accounts/: login.py  register.py
omogenjudge/frontend/archive/: archive.py
omogenjudge/frontend/contests/: register.py  urls.py
omogenjudge/frontend/jinja2/: base.html  nav.html
omogenjudge/frontend/jinja2/accounts/: login.html
omogenjudge/frontend/jinja2/contests/: helpers.html
omogenjudge/frontend/problems/: submit.py  view_problem.py
omogenjudge/problems/: install.py  testgroups.py
omogenjudge/settings/: base.py  production.py
omogenjudge/storage/migrations/: 0009_contest_allow_only_python.py  0010_problem_submission_size_limit_in_bytes.py  0011_rename_allow_only_python_contest_only_allow_python_and_more.py
omogenjudge/storage/models/: contests.py  problems.py  test_contests.py
omogenjudge/teams/: register.py
packaging/: build-host.sh  build-queue.sh  build-web.sh  rebuild-web.sh
packaging/web/: web.toml
packaging/web/debian/: control
(+4 files in other folders)
