[tool.poetry]
name = "omogenjudge"
version = "0.1.0"
description = ""
authors = ["Johan Sannemo <jsannemo@jsannemo.se>"]
include = [
    "omogenjudge/*",
    "omogenjudge/**/*",
]

[tool.poetry.dependencies]
pillow="^11.3.0"
pyyaml="^6.0.2"
python = "^3.12"
Django = "^4.2"
psycopg2 = "^2.9.8"
problemtools = {git = "https://github.com/kattis/problemtools", branch = "master"}
plastex = {git = "https://github.com/plastex/plastex.git", branch = "master"}
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.7"
uWSGI = "^2.0.30"
build = "^0.8.0"
Jinja2 = "^3.1.2"
Unidecode = "^1.3.4"
toml = "^0.10.2"
mailjet-rest = "^1.3.4"
types-requests = "^2.28.10"
oauthlib = "^3.2.1"
types-oauthlib = "^3.2.0.1"
django-debug-toolbar = "<4.0.0"

[tool.poetry.group.dev.dependencies]
django-stubs = {extras = ["compatible-mypy"], version = "^1.12.0"}
mypy = "^0.931"
django-debug-toolbar = "^3.6.0"
types-toml = "^0.10.8"
ansible = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
